--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "out/init.lua",
   "scripts": {
-    "prepublishOnly": "rbxtsc"
+    "prepublishOnly": "rbxtsc",
+    "dev": "rbxtsc -w"
   },
   "keywords": [],
   "author": "oonqt",
@@ -27,5 +28,8 @@
     "eslint-plugin-roblox-ts": "^0.0.24",
     "prettier": "^2.2.1",
     "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "@rbxts/delay-spawn-wait": "^2.0.0"
   }
 }
